tests/specs/import_equals.txt
# mod.ts
declare module Test {
  export interface Options {
  }
}

import Options = Test.Options;

export { Options };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export interface Options {
  |   ^


# output.txt
Defined in file:///mod.ts:2:3

interface Options



# output.json
[
  {
    "kind": "interface",
    "name": "Options",
    "location": {
      "filename": "file:///mod.ts",
      "line": 2,
      "col": 2,
      "byteIndex": 24
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "constructors": [],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
